--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,5 @@
     </head>
 <body>
     <div id="root"></div>
-    <script src="./index.jsx"></script>
+    <script type="module" src="./index.jsx"></script>
 </body>
