--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no">
-        <link rel="shortcut icon" href="../public/ExperienceCloud.svg" />
+        <link rel="shortcut icon" href="./public/ExperienceCloud.svg" />
         <title>Video Submission Form</title>
     </head>
 <body>
